Fixed filter spacing, first checkbox has indeterminate styles and will appear 'checked' when all items are completed, new X icon for removing todo item + a couple small spacing and styling fixes.

--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,12 @@
 .App {
     display: flex;
     justify-content: center;
-    border: 1px solid;
 }
 
 .App__Content {
     display: flex;
     flex-direction: column;
+    max-width: 500px;
 }
 
 .App__Heading {
