--- a/src/FooterOptions/FilterOptions.css
+++ b/src/FooterOptions/FilterOptions.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+    margin: 0 14px;
 }
 
 @media (max-width: 767px) {
@@ -14,9 +15,13 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 100%;
 }
 
 .FilterOptions__ClearCompleted:hover{
     text-decoration: underline;
 
+}
+.FilterOptions__StatusFilters {
+ display: flex;
 }
